Incorrect snapping of focus object in camera view #64342

Closed
opened 2019-05-09 02:15:00 +02:00 by Sam · 12 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: 3dc9da3a74
Worked: (optional)

Short description of error
All snap settings except "increment" don't work when trying to snap a camera's focus target, while in camera view.

Exact steps for others to reproduce the error
focus object snapping bug.blend

  1. Open attached blend file
  2. Select "Empty" object
  3. Press G and hold "Ctrl" to try snapping the Empty to the Cube's faces

No matter what snap option is selected, snapping works as if "increment" was selected. This only happens in camera view for the object used as that camera's focus target.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: `3dc9da3a74` Worked: (optional) **Short description of error** All snap settings except "increment" don't work when trying to snap a camera's focus target, while in camera view. **Exact steps for others to reproduce the error** [focus object snapping bug.blend](https://archive.blender.org/developer/F7019015/focus_object_snapping_bug.blend) 1. Open attached blend file 3. Select "Empty" object 4. Press G and hold "Ctrl" to try snapping the Empty to the Cube's faces No matter what snap option is selected, snapping works as if "increment" was selected. This only happens in camera view for the object used as that camera's focus target.
Author

Added subscriber: @Sam200

Added subscriber: @Sam200
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Member

Yeah, i can reproduce the issue

Yeah, i can reproduce the issue
Germano Cavalcante was assigned by Sebastian Parborg 2019-05-10 12:11:38 +02:00
Germano Cavalcante removed their assignment 2019-07-03 20:04:47 +02:00
Sergey Sharybin was assigned by Germano Cavalcante 2019-07-03 20:04:47 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Sergey Sharybin removed their assignment 2019-07-04 12:38:46 +02:00
Germano Cavalcante was assigned by Sergey Sharybin 2019-07-04 12:38:46 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

@mano-wii, if you are re-assigning tasks, please mention what exactly you expect new assignee to do.
You have a patch, and i gave all feedback i could there. It might not be ideal, but it is not up to me to decide whether it's go or no-go. This is up to module owners, which is either you or Campbell.

@mano-wii, if you are re-assigning tasks, please mention what exactly you expect new assignee to do. You have a patch, and i gave all feedback i could there. It might not be ideal, but it is not up to me to decide whether it's go or no-go. This is up to module owners, which is either you or Campbell.

I understand, sorry I didn't explain or asked first.

The problem here is that all objects passed in DEG_foreach_dependent_ID(...) are tagged as LIB_TAG_DOIT which for the operator this indicates that they are being transformed too.

On blender.chat you have recommended implementing a DEG_foreach_ancestor_ID_component(...), where we could additionally pass an eDepsObjectComponentType component.

I looked at the code and at first glance it didn't seem so simple to implement.

I'll see what I can do.

I understand, sorry I didn't explain or asked first. The problem here is that all objects passed in `DEG_foreach_dependent_ID(...)` are tagged as `LIB_TAG_DOIT` which for the operator this indicates that they are being transformed too. On blender.chat you have recommended implementing a `DEG_foreach_ancestor_ID_component(...)`, where we could additionally pass an `eDepsObjectComponentType component`. I looked at the code and at first glance it didn't seem so simple to implement. I'll see what I can do.

@mano-wii, ok now i see. I can do the tweaks to DEG_foreach_dependent_ID and introduce new queries.

Shall i ignore D4842 then?

@mano-wii, ok now i see. I can do the tweaks to `DEG_foreach_dependent_ID` and introduce new queries. Shall i ignore [D4842](https://archive.blender.org/developer/D4842) then?

In #64342#713153, @Sergey wrote:
@mano-wii, ok now i see. I can do the tweaks to DEG_foreach_dependent_ID and introduce new queries.

Shall i ignore D4842 then?

You can just show the patch with the new function. (and I'll do the rest if you prefer).
I wonder if dependencies like those in modifiers will still be considered.

> In #64342#713153, @Sergey wrote: > @mano-wii, ok now i see. I can do the tweaks to `DEG_foreach_dependent_ID` and introduce new queries. > > Shall i ignore [D4842](https://archive.blender.org/developer/D4842) then? You can just show the patch with the new function. (and I'll do the rest if you prefer). I wonder if dependencies like those in modifiers will still be considered.

This issue was referenced by 599626edd5

This issue was referenced by 599626edd534ad776ab020ca041a8df2fae0980c

@mano-wii, see D5184.
And you shouldn't worry about modifiers. All you care about here is "who's transform depends on a transform of FOO". The rest is up to dependency graph traversal to take care of.

@mano-wii, see [D5184](https://archive.blender.org/developer/D5184). And you shouldn't worry about modifiers. All you care about here is "who's transform depends on a transform of FOO". The rest is up to dependency graph traversal to take care of.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64342
No description provided.